# Jack-Spherobot

./: README.md
cv_stitch_ex/: CMakeLists.txt  package.xml
cv_stitch_ex/src/: st_node.cpp
jack-spherobot/: .cproject  .jack-spherobot.g_c  .jack-spherobot.g_x  .project  ProcessorExpert.pe  ProjectInfo.xml  core
jack-spherobot/Debug/: jack-spherobot.elf  jack-spherobot.map  makefile
jack-spherobot/Debug/Generated_Code/: AD1.d  ASBluetooth.d  (+59 more)
jack-spherobot/Documentation/: jack-spherobot.txt  jack-spherobot_Settings.previous.xml  jack-spherobot_Settings.xml
jack-spherobot/Generated_Code/: AD1.c  AD1.h  ASBluetooth.c  ASBluetooth.h  ASDXL.c  ASDXL.h  ASerialLdd1.c  ASerialLdd1.h  ASerialLdd2.c  ASerialLdd2.h  BitIoLdd1.c  BitIoLdd1.h  BitIoLdd2.c  BitIoLdd2.h  BitIoLdd3.c  BitIoLdd3.h  BitIoLdd4.c  BitIoLdd4.h  BitIoLdd5.c  BitIoLdd5.h  BitIoLdd6.c  BitIoLdd6.h  BitIoLdd7.c  BitIoLdd7.h  BitIoLdd8.c  BitIoLdd8.h  BitIoLdd9.c  BitIoLdd9.h  CAN1.c  CAN1.h  CDC1.c  CDC1.h  CPU_Config.h  CS1.c  CS1.h  Cpu.c  Cpu.h  CsIO1.c  CsIO1.h  EInt_M1A.c  (+76 more)
jack-spherobot/Sources/: Events.c  Events.h  MW-AHRSv1.c  MW-AHRSv1.h  main.c  main.h  pid_control.c  pid_control.h  quad_encoder.c  quad_encoder.h
jack_sphero_vr/: CMakeLists.txt  build.gradle  import-summary.txt  local.properties  package.xml  settings.gradle
jack_sphero_vr/jack_sphero_vr/: build.gradle
jack_spherobot_controller/: CMakeLists.txt  package.xml
jack_spherobot_controller/src/: jack_node.cpp
video_splitter/: CMakeLists.txt  CMakeLists.txt~  package.xml
video_splitter/src/: video_splitter_node.cpp
(+54 files in other folders)
